tdf#91385, recalc cond format formulas during hard recalc

Change-Id: I54b650d228c89a15eb37294eb108ab736163a000